Removing deprecated constructors